<resources>
    <string name="spaceStr"> </string>

    <string name="app_name">Lofe</string>

    <string name="add_record">Добавить</string>
    <string name="edit_record">Редактировать</string>
    <string name="delete_record">Удалить</string>
    <string name="follow_link">По ссылке</string>
    <string name="CopyRecordToClipboard">В буфер обмена</string>

    <string name="text_add_tag">Add tag</string>
    <string name="ScreenClock">Часы</string>
    <string name="ButtonSort">Сортировать</string>
    <string name="BtnNameNone">None</string>
    <string name="BtnNameAll">Все</string>
    <string name="BtnNameOk">Ok</string>
    <string name="BtnNameOrderByDate">По дате</string>

    <string name="DATE_UNDEFINED">Без времени</string>

    <string name="EventText">Событие</string>
    <string name="Alarm">Будильник</string>
    <string name="Notification">Уведомление</string>

    <string name="Done">Done!</string>
    <string name="Plus5m">+5 минут</string>
    <string name="PlusHour">+час</string>
    <string name="ForTomorrow">На завтра</string>
    <string name="ForNewTime">На новое время</string>

    <string name="ByCreateDate">Создания</string>
    <string name="ByLastChangeDate">Последнего изменения</string>
    <string name="ByAlarmDate">Назначенной</string>

    <string name="BtnExpand">Развернуть</string>
    <string name="BtnCollapse">Свернуть</string>
    <string name="txtIgnore">Не учитывать</string>

    <string name="txtPriority">Важность</string>
    <string name="txtInputTextToFind">Введите текст для поиска</string>

    <string name="txtMenuSettings">Настройки</string>

    <string name="btnName_test">Уведом</string>

    <string name="hintText_setTag">Уведом</string>

    <string name="strDescr_ApplyRecordEditBtnImg">Image button apply edit record</string>
    <string name="strDescr_ClockFace">Циферблат часов</string>
    <string name="strDescr_ToSortMenuBtnImg">Изображение для кнопки перехода к меню типа сортировки</string>
    <string name="strDescr_TagCreateBtnImg">Изображение для кнопки подтверждения создания ярлыка</string>
    <string name="strDescr_TagImg">Изображение на ярлыке</string>
    <string name="title_activity_maps">Map</string>

    <string name="Need">Нужно</string>
    <string name="Can">Можно</string>
    <string name="All">Все</string>

</resources>
