<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:weightSum="1">

    <FrameLayout
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tvDate"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/DATE_UNDEFINED" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_tag"
            android:id="@+id/btnAddTag"
            android:layout_gravity="center" />

        <ImageButton
            android:contentDescription="@string/strDescr_ApplyRecordEditBtnImg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imgBtnOkEdtRecord"
            android:background="@drawable/inkwell"
            android:layout_gravity="bottom|end" />

    </FrameLayout>

    <EditText
        android:background="@color/colorWhite"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/spaceStr"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRecordText" />

    <GridView
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:id="@+id/gvTags" />

</LinearLayout>