<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gvDialogTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnChooseTagsDialogNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/BtnNameNone" />

        <Button
            android:id="@+id/btnChooseTagsDialogAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnChooseTagsDialogOk"
            android:layout_toRightOf="@+id/btnChooseTagsDialogNone"
            android:text="@string/BtnNameAll" />

        <Button
            android:id="@+id/btnChooseTagsDialogOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/BtnNameOk" />

        <Button
            android:id="@+id/btnChooseTagsDialogOrderByDate"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cbApplyTime_aChooseTags"
            android:layout_alignStart="@+id/btnChooseTagsDialogOk"
            android:layout_alignLeft="@+id/btnChooseTagsDialogOk"
            android:layout_marginStart="-60dp"
            android:layout_marginLeft="-60dp"
            android:text="@string/BtnNameOk" />

        <RadioButton
            android:id="@+id/rbAnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="And" />

        <RadioButton
            android:id="@+id/rbOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or" />

        <CheckBox
            android:id="@+id/cbApplyTime_aChooseTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true"
            android:gravity="bottom|left"
            android:text="" />

        <TextView
            android:id="@+id/tvDate_aChooseTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/cbApplyTime_aChooseTags"
            android:layout_toRightOf="@+id/cbApplyTime_aChooseTags"
            android:text="TextView" />

    </RelativeLayout>
</LinearLayout>